# apeswarm

./: .env.example  .gitignore  CONTRIBUTING.md  LICENSE  README.md  SELF_EDIT_IMPLEMENTATION.md  demo_self_edit_write.py  pyproject.toml
.github/workflows/: ci.yml
src/apeswarm/: cli.py
src/apeswarm/agents/: __init__.py  builder_ape.py  git_ape.py  sarcastic_ape.py  self_edit_ape.py  truth_ape.py
src/apeswarm/core/: file_patcher.py  git_executor.py  model_factory.py  orchestrator.py  search.py
